<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:id="@+id/sync_dk"
        android:key="sync_dk"
        android:title="@string/denmark" />
    <CheckBoxPreference
        android:id="@+id/sync_de"
        android:key="sync_de"
        android:title="@string/germany" />
    <CheckBoxPreference
        android:id="@+id/sync_fr"
        android:key="sync_fr"
        android:title="@string/france" />
    <CheckBoxPreference
        android:id="@+id/sync_se"
        android:key="sync_se"
        android:title="@string/sweden" />
    <CheckBoxPreference
        android:id="@+id/sync_uk"
        android:key="sync_uk"
        android:title="@string/united_kingdom" />
    <CheckBoxPreference
        android:id="@+id/sync_us"
        android:key="sync_us"
        android:title="@string/united_states" />
</PreferenceScreen>